optimized the index page

--- a/index.html
+++ b/index.html
@@ -2,23 +2,76 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/Logo.png" />
+    <link rel="icon" type="image/png" href="/Logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- my CSSs for modules -->
+
+    <!-- SEO Meta Tags -->
+    <meta
+      name="description"
+      content="Teksun Lights: Premium manufacturer of solar lights (200W, 300W, 120W, 60W, 80W), conventional lights (200W, 300W, 120W, 60W, 80W), and poles. Your trusted partner for sustainable lighting solutions."
+    />
+    <meta
+      name="keywords"
+      content="Teksun Lights, solar lights  200W lights, 300W lights, 120W lights, 60W lights, 80W lights , conventional lights, 200W lights, 300W lights, 120W lights, 60W lights, 80W lights, pole manufacturing, sustainable lighting solutions"
+    />
+    <meta name="author" content="Teksun Lights" />
+
+    <!-- Open Graph / Social Media Meta Tags -->
+    <meta
+      property="og:title"
+      content="Teksun Lights - Solar and Conventional Lighting Solutions"
+    />
+    <meta
+      property="og:description"
+      content="Teksun Lights provides high-quality solar and conventional lights along with poles for various applications. Explore our products today."
+    />
+    <meta property="og:image" content="/Logo.png" />
+    <meta property="og:url" content="https://www.teksunlights.com" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Teksun Lights - Solar and Conventional Lighting Solutions"
+    />
+    <meta
+      name="twitter:description"
+      content="Discover top-quality solar lights, conventional lights, and poles with Teksun Lights."
+    />
+    <meta name="twitter:image" content="/Logo.png" />
+
+    <!-- Open Graph / Facebook Meta Tags -->
+    <meta
+      property="og:title"
+      content="Teksun Lights - Solar and Conventional Lighting Solutions"
+    />
+    <meta
+      property="og:description"
+      content="Teksun Lights provides high-quality solar and conventional lights along with poles for various applications. Explore our products today."
+    />
+    <meta property="og:image" content="/Logo.png" />
+    <meta property="og:url" content="https://www.teksunlights.com" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Teksun Lights" />
+
+    <!-- Fonts and Stylesheets -->
     <link rel="stylesheet" href="https://stijndv.com/fonts/Eudoxus-Sans.css" />
     <link
       rel="stylesheet"
-      type="text/css"
-      charset="UTF-8"
       href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css"
     />
     <link
       rel="stylesheet"
-      type="text/css"
       href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css"
     />
-    <title>TEKSUN LIGHTS</title>
+
+    <title>
+      Teksun Lights - Solar & Conventional Lighting Solutions | Poles
+      Manufacturer
+    </title>
   </head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
